Fix overflow

--- a/packages/scrabble-solver/src/pages/index.module.scss
+++ b/packages/scrabble-solver/src/pages/index.module.scss
@@ -21,7 +21,6 @@ $tiles-container-height: 200px;
 .content {
   flex: 1;
   display: flex;
-  overflow: auto;
 }
 
 .boardContainer {
